--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,7 @@
     margin-top: 15px;
 }
 
+/* ----------------------------------- Dark brown button ----------------------------*/
 .btn-group button {
     gap: 20px;
     border: none;
