--- a/style/navbar.css
+++ b/style/navbar.css
@@ -11,6 +11,7 @@
     font-size: 25px;
     font-weight: bolder;
     padding: 0;
+    color: white;
 }
 
 
@@ -35,7 +36,7 @@
     left: 50%;
     right: 50%;
     height: 2px;
-    background-color: #9A4444;
+    background-color: #6B4226;
     transition: left 0.3s, right 0.3s;
 }
 
@@ -82,4 +83,14 @@
 .container .navimg1 {
     margin-right: 10px;
     height: 50px;
+}
+
+
+.navbar-nav .nav-link {
+    color: white !important;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #6B4226 !important;
+   
 }
