--- a/style/cart.css
+++ b/style/cart.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 .header_p {
@@ -26,28 +25,24 @@
 /*table cart menu*/
 
 .table_design {
-
     border-collapse: separate;
     border-spacing: 0 20px;
 }
 
 .table_design th {
-
     border: none !important;
     font-family: 'Headland One', serif;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: bolder !important;
 }
 
 .table_design th,
 .table_design td {
-
     text-align: center;
     vertical-align: middle;
 }
 
 .d-flex {
-
     margin: 0;
     padding: 0;
 }
@@ -66,7 +61,6 @@
 }
 
 .table_design td {
-
     border-top: 1.5px solid black;
     border-bottom: 1.5px solid black;
     border-left: none;
@@ -86,18 +80,27 @@
     border-radius: 10px;
 }
 
-.btn_edit {
-    background-color: skyblue;
+a:hover{
+    color: white;
+}
+.updateBtn {
+    background-color: #6B4226;
     border: none;
-    width: 90px;
+    width: 100px;
     height: 35px;
-    color: rgb(14, 13, 13);
+    color: white;
     border-radius: 30px;
     text-transform: capitalize;
     font-family: 'Headland One', serif;
 }
 
-.btn_delete {
+.updateBtn:hover {
+    background-color: transparent;
+    transform: scale(1.03);
+    color: black;
+}
+
+.deleteBtn {
     background-color: red;
     border: none;
     padding: 10px 25px;
