--- a/style/login.css
+++ b/style/login.css
@@ -39,7 +39,6 @@ body {
     height: 40px;
     border: none;
     border-radius: 10px;
-    font-family: 'Headland One', serif;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -54,18 +53,28 @@ body {
     /* transform: scale(1.1); */
     /* ---Skew effect on hover--*/
     /* transform: skewX(-5deg) scale(1.05); */
-
     transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
-    background-color: black;
-    color: white;
+    background-color: white;
+    border: 2px solid #6B4226;
+    color: black;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
 }
 
 
 /* Mobile-first styling */
-.custom-card-width {
+.loginCard {
     width: 100%;
+    border: #6B4226 2px solid;
 }
+
+ .loginCard .cardHeader {
+    display: inline-block;
+    margin: 0;
+    vertical-align: middle;
+    font-size: 28px;
+    margin-bottom: 25px;
+}
+
 
 .loginContainer {
     border: black 0px solid;
@@ -81,6 +90,7 @@ body {
     height: 100%;
     background-color: transparent;
     /* Just for visibility */
+    margin-top: 100px;
 }
 
 .loginContainer .nav {
@@ -100,7 +110,7 @@ body {
 }
 
 @media (min-width: 768px) {
-    .custom-card-width {
+    .loginCard {
         width: 500px;
     }
 }
