--- a/style/not-availablee.css
+++ b/style/not-availablee.css
@@ -1,4 +1,5 @@
 .not-available {
+
   /* Existing styles for positioning */
   position: absolute;
   top: 8rem;
@@ -7,7 +8,10 @@
   /* Other styles */
   padding: 20px;
   /* Additional styles */
-  background-color: rgba(255, 0, 0, 0.7);
+  /* background-color: rgba(233, 22, 22, 0.7);  */
+  border: 2px solid rgba(233, 22, 22, 0.7);
+  background-color: transparent;
+
   /* Red background with transparency */
   color: white;
   /* Text color */
@@ -26,4 +30,5 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
   /* Adding box shadow */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
 }
